syntax = "proto3";

package oceanstars.ecm.protobuf;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "oceanstars/protobuf/cqrs.proto";
import "google/protobuf/descriptor.proto";

option java_multiple_files = true;
option java_package = "oceanstars.ecommerce.ecm.api.rpc.v1.dto.asset";

// 资产实体
message EcmAsset {
  // 资产名称
  string name = 1;
  // 资产类型
  int32 type = 2;
  // 资产描述
  string description = 3;
  // 资产原生数据
  google.protobuf.Any raw_data = 4;
}

// 资产原生信息 - 功能列表
message EcmAssetFunction {
  // 功能隶属 - 通过资产ID关联隶属关系
  int64 parent = 1;
}

// 创建资产命令实体
message EcmCreateAssetCommand {
  // 资产名称
  string name = 1;
  // 资产类型
  int32 type = 2;
  // 资产描述
  string description = 3;
  // 资产原生数据
  google.protobuf.Any raw_data = 4;
}

// 创建资产返回结果实体
message EcmCreateAssetResult {
  // 资产代理唯一识别符（物理主键）
  int64 id = 1;
}