syntax = "proto3";

package oceanstars.ecm.protobuf;

import "ecm-asset-dto.proto";

option java_multiple_files = true;
option java_package = "oceanstars.ecommerce.ecm.api.rpc.v1.service.asset";

// ECM资产应用服务
service EcmAssetAppService {

  // 创建内容服务接口
  rpc createAsset(EcmCreateAssetCommand) returns (EcmCreateAssetResult);
}

